--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
+        "laravelcollective/html": "5.*",
         "phpspec/phpspec": "~2.1"
     },
     "autoload": {
