--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "phpunit/phpunit": "~4.0",
         "laravelcollective/html": "5.*",
         "phpspec/phpspec": "~2.1",
-        "maatwebsite/excel": "^2.1"
+        "maatwebsite/excel": "^2.1",
+        "chumper/zipper": "1.0.x"
     },
     "autoload": {
         "classmap": [
