--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "barryvdh/laravel-snappy": "^0.3.3",
+        "knplabs/knp-snappy": "^0.4.3",
+        "h4cc/wkhtmltopdf-i386": "0.12.3",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
